Fix border overlapping

--- a/app/assets/stylesheets/business_review.scss
+++ b/app/assets/stylesheets/business_review.scss
@@ -147,14 +147,14 @@
   display: flex;
   font-size: 16px;
   justify-content: space-between;
-  padding: 20px 20px;
+  padding: 10px 1px;
   width: 100%;
   height: 100%;
   min-height: 120px;
   border-bottom: 1px solid #ccc;
 }
 .business__show-reviews:first-child {
-  padding-top: 20px;
+  padding-top: 10px;
   border-top: 1px solid #ccc;
 }
 
